<resources>
    <string name="app_name">Laboratorio Clínico Pro C</string>
    <string name="sign_up">Registro</string>
    <string name="name">Nombre</string>
    <string name="format_required">%s*</string>
    <string name="email">Correo electrónico</string>
    <string name="age">Edad</string>
    <string name="sex">Sexo</string>
    <string name="male">Masculino</string>
    <string name="female">Femenino</string>
    <string name="chronic_diseases">Enfermedades crónicas</string>
    <string name="sign_up_action">Registrar</string>
    <string name="field_is_error">%s no puede estar %s</string>
    <string name="field_have_error">%s no puede contener %s</string>
    <string name="field_not_having_error">%s debe contener %s</string>
    <string name="cant_be_empty">No puede estar vacío</string>
    <string name="patients">Pacientes</string>
    <string name="tests">Exámenes</string>
    <string name="age_format">%d años</string>
    <string name="no_patients_msg">¡Hola! está algo vacío por aquí...\nRegistrate o registra a un ser querido\npara agendarle un exámen</string>
    <string name="update_action">Actualizar</string>
    <string name="see_recommendations">Ver Recomendaciones</string>
    <string name="see_tests">Ver Exámenes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="available_lab_tests">Exámenes disponibles</string>
    <string name="see">ver</string>
    <string name="add_patient">Agregar paciente</string>
    <string name="test_detial">Detalles de exámen</string>
    <string name="no_recommendations_msg">No hay recomendaciones específicas para este exámen, ten en cuenta las recomendaciones generales.</string>
    <string name="appointments">Citas</string>
    <string name="add_appointment">Agregar cita</string>
    <string name="new_appointment">Nueva cita</string>
    <string name="description">Descripción</string>
    <string name="add_test">Agregar exámen</string>
    <string name="total">Total</string>
    <string name="delete">Eliminar</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="category">Categoria</string>
    <string name="calendar">Calendario</string>
    <string name="waiting_for_results_msg">¡Tus resultados estarán listos pronto!</string>
    <string name="results">Resultados</string>
</resources>