<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/myPatientsFragment">
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.gameloop.laboratorioclinicoproc.views.signup.SignUpFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_sign_up" />
    <fragment
        android:id="@+id/myPatientsFragment"
        android:name="com.gameloop.laboratorioclinicoproc.views.patients.MyPatientsFragment"
        android:label="@string/patients"
        tools:layout="@layout/fragment_my_patients">
        <action
            android:id="@+id/action_myPatientsFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
    </fragment>
    <fragment
        android:id="@+id/testsFragment"
        android:name="com.gameloop.laboratorioclinicoproc.views.laboratorytests.TestsFragment"
        android:label="@string/tests"
        tools:layout="@layout/fragment_tests"
        />
</navigation>