<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.gameloop.laboratorioclinicoproc.views.signup.SignUpViewModel" />
        <import type="com.gameloop.laboratorioclinicoproc.database.model.patient.Sex"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="40dp"
        android:paddingVertical="20dp">

        <!-- Name field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@{@string/format_required(@string/name)}"
            app:layout_constraintBottom_toTopOf="@id/tfEmail"
            app:layout_constraintEnd_toStartOf="@id/tfAge"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed"
            app:startIconDrawable="@drawable/ic_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@={viewModel.patient.fullName}"
                android:textColorHint="#616161"
                android:nextFocusDown="@id/tietAge"
                android:nextFocusRight="@id/tietAge"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Age field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfAge"
            android:layout_width="80dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tfName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/tfName"
            android:hint="@{@string/format_required(@string/age)}"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#616161"
                android:inputType="number"
                android:nextFocusDown="@id/tietEmail"
                android:nextFocusLeft="@id/tietEmail"
                app:age="@={viewModel.patient.age}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tfName"
            app:layout_constraintBottom_toTopOf="@id/rgSex"
            android:layout_marginTop="20dp"
            android:hint="@{@string/format_required(@string/email)}"
            app:startIconDrawable="@drawable/ic_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#616161"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.patient.email}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Sex field -->
        <RadioGroup
            android:id="@+id/rgSex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tfEmail"
            app:layout_constraintBottom_toTopOf="@id/btnSignUp"
            android:layout_marginTop="20dp"
            tools:checkedButton="@id/rbMale"
            app:sex="@={viewModel.patient.sex}">
            <TextView
                android:id="@+id/tvSexLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"/>
            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:drawableStart="@drawable/ic_baseline_male_24_tint"
                />
            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:drawableStart="@drawable/ic_baseline_female_24"
                />
        </RadioGroup>

        <!-- Sign up button -->
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="@{() -> viewModel.onSignUp()}"
            android:text="@{viewModel.isUpdating ? @string/update_action : @string/sign_up_action}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rgSex" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>